<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_telecom_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelecomActivity">

    <TextView
        android:id="@+id/tv_activity_telecom_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bn_activity_telecom_ignore"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="175sp"
            android:layout_height="60sp"
            android:layout_weight="1"
            android:onClick="onIgnore"
            android:text="@string/activity_telecom_ignore_button_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bn_activity_telecom_disconnect"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="175sp"
            android:layout_height="60sp"
            android:layout_weight="1"
            android:onClick="onDisconnect"
            android:text="@string/activity_telecom_disconnect_button_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bn_activity_telecom_connect"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="175sp"
            android:layout_height="60sp"
            android:layout_weight="1"
            android:onClick="onConnect"
            android:text="@string/activity_telecom_connect_button_text"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>